2002-03-27	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac:
	AC_INIT(package,_RTEMS_VERSION,_RTEMS_BUGS).
	AM_INIT_AUTOMAKE([no-define foreign 1.6]).
	* Makefile.am: Remove AUTOMAKE_OPTIONS.

2001-02-05	Joel Sherrill <joel@OARcorp.com>

	* rtems/Makefile.am, rtems/score/Makefile.am: Removed again.

2002-01-31	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* rtems/Makefile.am: Removed.
	* rtems/score/Makefile.am: Removed.
	* configure.ac: Reflect changes above.
	* Makefile.am: Reflect changes above.

2001-01-30	Joel Sherrill <joel@OARcorp.com>

	* Makefile.am: Corrected so .h files from rtems/score/ are installed.

2002-01-03	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* cpu.c: Include rtems/bspIo.h instead of bspIo.h.

2001-12-19	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Add multilib support.

2001-11-28	Joel Sherrill <joel@OARcorp.com>,

	This was tracked as PR91.
	* rtems/score/cpu.h: Added CPU_PROVIDES_ISR_IS_IN_PROGRESS macro which
	is used to specify if the port uses the standard macro for this (FALSE).
	A TRUE setting indicates the port provides its own implementation.

2001-10-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* .cvsignore: Add autom4te.cache for autoconf > 2.52.
	* configure.in: Remove.
	* configure.ac: New file, generated from configure.in by autoupdate.

2001-09-23	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* rtems/score/Makefile.am: Use 'PREINSTALL_FILES ='.
	* Makefile.am: Use 'PREINSTALL_FILES ='.

2001-02-04	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am, rtems/score/Makefile.am: 
	Apply include_*HEADERS instead of H_FILES.

2001-01-03	Joel Sherrill <joel@OARcorp.com>

	* rtems/score/cpu.h: Added _CPU_Initialize_vectors().

2000-11-09	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Use ... instead of RTEMS_TOPdir in ACLOCAL_AMFLAGS.

2000-11-02	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Switch to ACLOCAL_AMFLAGS = -I $(RTEMS_TOPdir)/aclocal.
